examples/bad/05-03-while-mismatch-fun-ret.dog
int cond(int i) {
    return i;
}

while (cond(10)) {};